2004-02-04  Marcus Lundblad  <ml@update.uu.se>

	* FvwmScript/Widgets/TextField.c (InitTextField)
	(DrawPointText)
	(DrawTextField)
	(EvtMouseTextField)
	(EvtKeyTextField):
	* FvwmScript/Widgets/Tools.h:
	* FvwmScript/Widgets/Tools.c (getByteOffsetBoundsCheck)
	(getCharOffsetBoundsCheck)
	(InsertText)
	(GetText):
	Fixed to work with multibyte character sets
	
2004-01-24  Olivier Chapuis  <olivier.chapuis@free.fr>

	* FvwmTaskBar/Start.c (StartButtonParseConfig):
	Fixed Button parsing when some tabs are used

2004-01-13  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmScript/Scripts/FvwmScript-Quit:
	correct reboot action

2004-01-12  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmTaskBar/Start.c (StartButtonParseConfig):
	(StartButtonInit):
	do not ignore left and right margins if no start button is defined

2004-01-04  Olivier Chapuis  <olivier.chapuis@free.fr>

	* FvwmTheme/FvwmTheme.1:
	Typo: WindowShadeScrools -> WindowShadeShrinks

	* FvwmScript/FvwmScript.c (MainLoop):
	Updated root transparent bg when we are (un)swallowed

2003-12-08  Mikhael Goikhman  <migo@homemail.com>

	* FvwmTheme/FvwmTheme.1:
	added small notes

2003-11-15  Mikhael Goikhman  <migo@homemail.com>

	* FvwmScript/Scripts/fvwm-script-setup95.pl:
	some clean up and added small new functionality

2003-11-12  Mikhael Goikhman  <migo@homemail.com>

	* FvwmWindowMenu.in:
	* FvwmWindowMenu.1:
	fixed the man page

2003-10-31  Mikhael Goikhman  <migo@homemail.com>

	* FvwmPerl/FvwmPerl.in:
	* FvwmPerl/FvwmPerl.1:
	added showMessage user function to find and invoke a good dialog window
	and better documentation

2003-10-26  Mikhael Goikhman  <migo@homemail.com>

	* FvwmAnimate/FvwmAnimate.c:
	* FvwmAnimate/FvwmAnimate.1:
	added dynamical commands "pause", "play", "push", "pop", "reset"

2003-09-02  olicha  <olivier.chapuis@free.fr>

	* FvwmScript/Widgets/Swallow.c (ProcessMsgSwallow):
	Fixed swallowexec by also checking for the ressource and class names

2003-09-01  olicha  <olivier.chapuis@free.fr>
