@@ -1,3 +1,8 @@
+2004-02-16  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* FvwmButtons/FvwmButtons.c (HandlePanelPress):
+	force StaticGravity upon panel windows
+
 2004-02-04  Marcus Lundblad  <ml@update.uu.se>
 
 	* FvwmScript/Widgets/TextField.c (InitTextField)
@@ -11,7 +16,7 @@
 	(InsertText)
 	(GetText):
 	Fixed to work with multibyte character sets
-	
+
 2004-01-24  Olivier Chapuis  <olivier.chapuis@free.fr>
 
 	* FvwmTaskBar/Start.c (StartButtonParseConfig):
